# satellite

./: pyproject.toml
src/: definitions.py  main.py
src/case/: basic.py  satellite.py
src/tle/: STARLINK.txt
